[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/File.png" type="Texture" id=1]
[ext_resource path="res://Art/ResourceColumn.png" type="Texture" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://File.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 70 )

[node name="File" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FileImage" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ResourcesImage" type="Sprite" parent="FileImage"]
texture = ExtResource( 2 )

[node name="EnergyLabel" type="Label" parent="FileImage/ResourcesImage"]
margin_left = -27.0
margin_top = -39.0
margin_right = -18.0
margin_bottom = -21.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaterialLabel" type="Label" parent="FileImage/ResourcesImage"]
margin_left = -26.0
margin_top = -2.0
margin_right = -18.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkerLabel" type="Label" parent="FileImage/ResourcesImage"]
margin_left = -26.0
margin_top = 43.0
margin_right = -18.0
margin_bottom = 61.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FieldName" type="Label" parent="."]
margin_left = -29.0
margin_top = -69.0
margin_right = 19.0
margin_bottom = -51.0
grow_horizontal = 2
theme = ExtResource( 3 )
text = "NameGoesHere"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_File_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_File_mouse_exited"]
